# xiangqi

./: .gitignore  CMakeLists.txt  main_old.cpp
assets/: black_horse.png:Zone.Identifier  board.png:Zone.Identifier
include/: AIEngine.h  AIEngine.hpp  Board.h  Board.hpp  CheckPopupState.hpp  GameState.hpp  MenuState.hpp  NetworkManager.h  Piece.h  State.hpp  StateManager.hpp
include/strategy/: AlphaBetaStrategy.h  AlphaBetaStrategy.hpp  MinimaxStrategy.h  MinimaxStrategy.hpp  RandomStrategy.h  RandomStrategy.hpp
src/: AIEngine.cpp  AlphaBetaStrategy.cpp  Board.cpp  CheckPopupState.cpp  GameState.cpp  MenuState.cpp  MinimaxStrategy.cpp  Piece.cpp  RandomStrategy.cpp  main.cpp
src/strategy/: AlphaBetaStrategy.cpp  MinimaxStrategy.cpp  RandomStrategy.cpp
