cmake_minimum_required(VERSION 3.10)
project(Xiangqi)
set(CMAKE_CXX_STANDARD 17)
find_package(SFML 2.5 COMPONENTS graphics window system network REQUIRED)
include_directories(include)
file(GLOB SRC_FILES src/*.cpp)
add_executable(Xiangqi ${SRC_FILES})
target_link_libraries(Xiangqi sfml-graphics sfml-window sfml-system sfml-network)